# graphite

./: .gitignore  Makefile  README.md  RESOLVE_ONTOLOGY.md  data_challenges.md  docs_to_bric_parsing.md  next_steps.md  ontology_proposal.md  plan.md  pyproject.toml  snv_adjustment.md
data/reference_site/abbey_road/: buildings.csv  campuses.csv  media_types.csv  meter_measures.csv  meter_relations.csv  meters.csv  readings.csv  sensors.csv  timeseries_refs.csv  zones.csv
data/sites/abbey_road/: annotations.csv  buildings.csv  databases.csv  devices.csv  meter_measures.csv  meter_relations.csv  meters.csv  readings.csv  sensors.csv  site_meta.yaml  timeseries_refs.csv  zones.csv
data/sites/gartuna/: annotations.csv  annotations_manual.csv  (+13 more)
reference/: pme_setup.md
reference/docs/: snackviken_followups.md  snackviken_timeseries_scan.md  snv_anga_followups.md
reference/scripts/: README.md  apply_quality_patches.py  apply_topology_overrides.py  assemble_site.py  build_ontology.py  classify_excel_diffs.py  detect_meter_swaps.py  excel_relations.py  generate_building_virtuals.py  generate_outage_patches.py  inject_strux_readings.py  naming_relations.py  parse_audit.py  parse_flow_schema.py  parse_meter_names.py  parse_reporting_xlsx.py  regenerate_workstream.py  render_audit_png.py  scaffold_workstream.py  slice_timeseries.py  source_conflicts.py  timeseries_relations.py  validate_accounting.py  validate_building_totals.py  validate_conservation.py  vlm_edge_check.py
reference/sql_db_time_series/: quantity.txt  quantity_2.txt  source.txt  source_quantity.txt
(+281 files in other folders)
